Refine immutability handling and fix SpotBugs findings